--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,13 @@
     <title>Sart Of Project</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="google.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <h1>start of project</h1>
