--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sart Of Project</title>
+    <title>Live-User-Filter</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="google.png" />
+    <link
+      rel="icon"
+      href="https://cdn.dribbble.com/users/1466638/screenshots/6960051/comp-1_still.gif?resize=400x0"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
