added html tree to the project

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,25 @@
     />
   </head>
   <body>
-    <h1>start of project</h1>
+    <header class="header">
+      <section class="head">
+        <div class="title">
+          <h4>Live User Filter</h4>
+          <p>Search By Name / or Location</p>
+        </div>
+        <input type="text" required placeholder="Search" />
+        <div class="users-Wrapper">
+          <div class="profile-Card">
+            <img src="https://randomuser.me/api/portraits/men/0.jpg" alt="" />
+            <div class="info-Wrap">
+              <h3>Ameer Ameen</h3>
+              <p>Amsterdam, Netherlands</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </header>
+
     <script src="script.js"></script>
   </body>
 </html>
