added styling to upder side of head , and little html

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
           <h4>Live User Filter</h4>
           <p>Search By Name / or Location</p>
         </div>
-        <input type="text" required placeholder="Search" />
+        <div class="input-Text-Wrap">
+          <input class="text-Input" type="text" required placeholder="Search" />
+        </div>
         <div class="users-Wrapper">
           <div class="profile-Card">
             <img src="https://randomuser.me/api/portraits/men/0.jpg" alt="" />
