added styling to the buttom side of head

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,11 @@
         </div>
         <div class="users-Wrapper">
           <div class="profile-Card">
-            <img src="https://randomuser.me/api/portraits/men/0.jpg" alt="" />
+            <img
+              class="profile-Img"
+              src="https://randomuser.me/api/portraits/men/0.jpg"
+              alt=""
+            />
             <div class="info-Wrap">
               <h3>Ameer Ameen</h3>
               <p>Amsterdam, Netherlands</p>
