--- a/src/index.html
+++ b/src/index.html
@@ -27,19 +27,7 @@
         <div class="input-Text-Wrap">
           <input class="text-Input" type="text" required placeholder="Search" />
         </div>
-        <div class="users-Wrapper">
-          <div class="profile-Card">
-            <img
-              class="profile-Img"
-              src="https://randomuser.me/api/portraits/men/0.jpg"
-              alt=""
-            />
-            <div class="info-Wrap">
-              <h3>Ameer Ameen</h3>
-              <p>Amsterdam, Netherlands</p>
-            </div>
-          </div>
-        </div>
+        <div class="users-Wrapper"></div>
       </section>
     </header>
     <script src="script.js"></script>
