--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <section class="head">
         <div class="title">
           <h4>Live User Filter</h4>
-          <p>Search By Name / or Location</p>
+          <p>Search By Name</p>
         </div>
         <div class="input-Text-Wrap">
           <input class="text-Input" type="text" required placeholder="Search" />
